--- a/client/src/components/lib/NewsCard/NewsCard.css
+++ b/client/src/components/lib/NewsCard/NewsCard.css
@@ -5,14 +5,10 @@
   gap: 2vw;
 }
 
-#newscard-media {
+#newscard-media img {
+  border-radius: 16px;
   width: 300px;
   height: 200px;
-}
-
-img {
-  width: 100%;
-  height: auto;
 }
 
 #newscard-content {
