Home page redesign

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,8 @@
 
   --header-font: 48px;
   --header-font-weight: 600;
+  --h2-font: 36px;
+  --h2-font-weight: 600;
   --subheader-font: 24px;
   --subheader-font-weight: 600;
   --text-font: 16px;
