--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -3,8 +3,6 @@
   height: 100vh;
   margin-left: calc(var(--navbar-width) + 2vw);
   margin-right: 1vw;
-  padding-top: 1vw;
-  padding-left: 1vw;
   background: var(--background);
   color: var(--navbar-light-primary);
 }
@@ -14,7 +12,13 @@
   color: var(--font-dark);
   font-weight: var(--header-font-weight);
   padding: 0;
-  margin-top: 2vw;
+}
+
+#h2 {
+  font-size: var(--h2-font);
+  color: var(--font-dark);
+  font-weight: var(--h2-font-weight);
+  padding: 0;
 }
 
 #subheader {
