bind mark as read endpoint to article title

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -25,6 +25,7 @@
   font-size: var(--subheader-font);
   color: var(--font-dark);
   font-weight: var(--subheader-font-weight);
+  text-decoration: none;
   padding: 0;
 }
 
