--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,20 +1,20 @@
-#page {
-  width: 100vw;
-  height: 100vh;
+.page {
   margin-left: calc(var(--navbar-width) + 2vw);
   margin-right: 1vw;
+  margin-top: 1vw;
   background: var(--background);
   color: var(--navbar-light-primary);
+  overflow-x: hidden;
 }
 
-#header {
+.header {
   font-size: var(--header-font);
   color: var(--font-dark);
   font-weight: var(--header-font-weight);
   padding: 0;
 }
 
-#h2 {
+.h2 {
   font-size: var(--h2-font);
   color: var(--font-dark);
   font-weight: var(--h2-font-weight);
@@ -29,7 +29,7 @@
   padding: 0;
 }
 
-#subheader-light {
+.subheader-light {
   font-size: var(--subheader-font);
   color: var(--font-light);
   font-weight: var(--subheader-font-weight);
