--- a/client/src/components/lib/Navbar/Navbar.css
+++ b/client/src/components/lib/Navbar/Navbar.css
@@ -139,6 +139,10 @@
   transition: width 0.2s, height 0.2s;
 }
 
+.nav-footer:hover {
+  cursor: pointer;
+}
+
 .nav-footer-heading {
   position: relative;
   width: 100%;
