--- a/client/src/components/routes/Category/Category.css
+++ b/client/src/components/routes/Category/Category.css
@@ -15,3 +15,10 @@
 .category-subheader {
   margin-bottom: 1vw;
 }
+
+.no-search-message {
+  padding: 20px;
+  text-align: center;
+  font-size: 1.2rem;
+  color: #666;
+}
