--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,10 @@
   --navbar-dark-secondary: #2c3e50;
   --navbar-light-primary: #f5f6fa;
   --navbar-light-secondary: #8392a5;
+
+  @media (max-width: 1200px) {
+    --navbar-width: 56px;
+  }
 }
 
 html,
