--- a/client/src/components/lib/NewsCard/NewsCard.css
+++ b/client/src/components/lib/NewsCard/NewsCard.css
@@ -7,13 +7,32 @@
   margin-bottom: 20px;
   height: 300px;
   align-items: stretch;
+
+  @media (max-width: 600px) {
+    flex-direction: column;
+    height: 400px;
+    flex: none;
+  }
 }
 
 .blog-card__img {
-  flex: 0 0 360px;
+  flex: 0 0 600px;
   position: relative;
   overflow: hidden;
   height: 100%;
+
+  @media (max-width: 1400px) {
+    flex: 0 0 500px;
+  }
+
+  @media (max-width: 1000px) {
+    flex: 0 0 350px;
+  }
+
+  @media (max-width: 600px) {
+    flex: none;
+    height: 200px;
+  }
 }
 
 .blog-card__img img {
@@ -21,6 +40,12 @@
   height: 100%;
   object-fit: cover;
   object-position: center;
+
+  @media (max-width: 600px) {
+    height: 200px;
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
 }
 
 .blog-card__content {
@@ -29,12 +54,21 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  @media (max-width: 600px) {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
+  }
 }
 .buttons_row {
   width: 100%;
   display: flex;
   align-items: cen;
   justify-content: space-between;
+  position: relative;
 }
 .blog-card__button {
   display: inline-block;
@@ -66,6 +100,20 @@
   font-weight: bold;
   margin-bottom: 10px;
   color: #333;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  @media (max-width: 1000px) {
+    font-size: 1.1rem;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 1rem;
+    -webkit-line-clamp: 2;
+  }
 }
 
 .blog-card__text {
@@ -79,32 +127,37 @@
   overflow: hidden;
   text-overflow: ellipsis;
   width: 100%;
+
+  @media (max-width: 600px) {
+    -webkit-line-clamp: 3;
+    font-size: 0.8rem;
+  }
 }
 
 /* Top Story styles */
 
 .top-story {
-  flex-direction: column;
-  height: 800px;
+  @media (min-width: 1200px) {
+    flex-direction: column;
+    height: 800px;
+  }
 }
 
-.blog-card__img {
-  flex: 0 0 600px;
-  position: relative;
-  overflow: hidden;
-  height: 100%;
-}
 .top-story .blog-card__img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
+  @media (min-width: 1200px) {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
 }
 
 .top-story .blog-card__content {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  overflow: hidden;
+  @media (min-width: 1200px) {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
+  }
 }
